# laketop

./: .gitignore  README.md  pyproject.toml
docs/explanation/: architecture.md
docs/how-to/: profile_local_tables.md
docs/reference/: api_reference.md
docs/tutorials/: getting_started.md
src/laketop/: __main__.py  cli.py  engine.py  styles.css  ui.py
