[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "laketop"
version = "0.1.0"
description = "A lightweight CLI tool to profile local Delta Lake tables natively"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "deltalake>=0.16.0",
    "textual>=0.50.0",
    "typer>=0.9.0",
    "pyarrow>=14.0.0"
]

[project.scripts]
laketop = "laketop.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["laketop"]
package-data = { "laketop" = ["*.css"] }
